--- a/index.html
+++ b/index.html
@@ -5,80 +5,96 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clarion Works Co</title>
 
+    <!-- Google Font: Inter (clean, professional, excellent spacing) -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+
     <style>
-        body {
+        /* Global Reset */
+        * {
             margin: 0;
-            font-family: Arial, Helvetica, sans-serif;
-            background-color: #f6f6f6;
-            color: #222;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Inter', sans-serif;
+            color: #1f1f1f;
+            background-color: #fafafa;
+            line-height: 1.65;
+            letter-spacing: 0.2px;
         }
 
         /* Header */
         header {
-            background-color: #1a1a1a;
+            background-color: #111;
             color: white;
-            padding: 20px;
+            padding: 24px 0;
             text-align: center;
         }
 
         header h1 {
-            margin: 0;
             font-size: 2rem;
-            letter-spacing: 1px;
+            font-weight: 600;
+            letter-spacing: 0.5px;
         }
 
-        /* Hero section */
+        /* Hero Section */
         .hero {
             background: linear-gradient(rgba(0,0,0,0.45), rgba(0,0,0,0.45)),
                         url('https://images.unsplash.com/photo-1503264116251-35a269479413?auto=format&fit=crop&w=1600&q=60');
             background-size: cover;
             background-position: center;
-            height: 60vh;
+            height: 58vh;
             display: flex;
             flex-direction: column;
-            justify-content: center;
             align-items: center;
-            color: white;
+            justify-content: center;
             text-align: center;
-            padding: 0 20px;
+            padding: 20px;
+            color: #fff;
         }
 
         .hero h2 {
-            font-size: 2.5rem;
-            margin: 0;
+            font-size: 2.6rem;
+            font-weight: 600;
+            margin-bottom: 12px;
+            letter-spacing: 0.4px;
         }
 
         .hero p {
+            max-width: 720px;
             font-size: 1.2rem;
-            max-width: 700px;
-            margin-top: 15px;
+            font-weight: 300;
         }
 
-        /* Content section */
+        /* Main Content */
         .content {
-            max-width: 900px;
-            margin: 40px auto;
-            padding: 0 20px;
+            max-width: 860px;
+            margin: 60px auto;
+            padding: 0 24px;
         }
 
         .content h3 {
-            font-size: 1.7rem;
-            margin-bottom: 10px;
+            font-size: 1.8rem;
+            font-weight: 600;
+            margin-bottom: 16px;
+            letter-spacing: 0.3px;
         }
 
         .content p {
-            line-height: 1.6;
             font-size: 1.1rem;
+            margin-bottom: 20px;
         }
 
         /* Footer */
         footer {
-            background-color: #1a1a1a;
-            color: white;
+            background-color: #111;
+            color: #fff;
             text-align: center;
-            padding: 20px;
-            margin-top: 50px;
+            padding: 22px 0;
+            margin-top: 60px;
             font-size: 0.9rem;
+            letter-spacing: 0.3px;
         }
     </style>
 </head>
@@ -91,22 +107,22 @@
 
 <section class="hero">
     <h2>Where Precision Meets Creativity</h2>
-    <p>Clarion Works Co is built on the principles of clarity, craftsmanship, and intentional design. This is our introduction to a new era of digital solutions.</p>
+    <p>Clarion Works Co delivers clarity, refinement, and intentional design across every digital project.</p>
 </section>
 
 <section class="content">
     <h3>Welcome to Clarion Works Co</h3>
     <p>
-        Clarion Works Co represents a fresh approach to creating clean, purposeful, 
-        and well-crafted digital experiences. Whether you're building, learning, 
-        or exploring, our goal is to provide straightforward guidance and 
-        reliable structure for every project.
+        Clarion Works Co represents a new standard in digital craftsmanship. 
+        Our philosophy is simple: build with purpose, design with intention, 
+        and communicate with clarity.
     </p>
 
     <p>
-        This website serves as the foundation for our future offerings, tutorials, 
-        and digital solutions. It will expand over time into a full suite of 
-        tools, examples, and resources built with clarity and intention at the core.
+        This website introduces the foundation of our work—clean structure, 
+        thoughtful presentation, and future-forward solutions. As we continue 
+        to expand, you will see this space evolve into a curated set of digital 
+        tools, guides, and creative resources.
     </p>
 </section>
 
