--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clarion Works Co</title>
 
-    <!-- Google Font: Inter (clean, modern, professional spacing) -->
+    <!-- Google Analytics 4 (GA4) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1T4EP1GJ4F"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-1T4EP1GJ4F');
+    </script>
+
+    <!-- Google Font: Inter -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 
     <style>
@@ -66,7 +75,7 @@
             font-weight: 300;
         }
 
-        /* NEW CLEAN SECTION */
+        /* MAIN INTRO SECTION */
         .intro {
             max-width: 780px;
             margin: 50px auto;
