--- a/index.html
+++ b/index.html
@@ -5,24 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clarion Works Co</title>
 
-    <!-- Google Analytics 4 (GA4) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1T4EP1GJ4F"></script>
+    <!-- Google Analytics 4 (Correct Measurement ID) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ND2WF11DY1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-1T4EP1GJ4F');
+      gtag('config', 'G-ND2WF11DY1');
     </script>
 
     <!-- Google Font: Inter -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+        * { margin: 0; padding: 0; box-sizing: border-box; }
 
         body {
             font-family: 'Inter', sans-serif;
@@ -32,7 +28,6 @@
             letter-spacing: 0.15px;
         }
 
-        /* HEADER */
         header {
             background-color: #0f0f0f;
             color: white;
@@ -46,7 +41,6 @@
             letter-spacing: 0.6px;
         }
 
-        /* HERO */
         .hero {
             background: linear-gradient(rgba(0,0,0,0.45), rgba(0,0,0,0.45)),
                         url('https://images.unsplash.com/photo-1503264116251-35a269479413?auto=format&fit=crop&w=1600&q=60');
@@ -75,7 +69,6 @@
             font-weight: 300;
         }
 
-        /* MAIN INTRO SECTION */
         .intro {
             max-width: 780px;
             margin: 50px auto;
@@ -95,7 +88,6 @@
             margin-bottom: 12px;
         }
 
-        /* THREE-COLUMN BRAND VALUES */
         .values {
             display: flex;
             justify-content: center;
@@ -125,7 +117,6 @@
             color: #444;
         }
 
-        /* FOOTER */
         footer {
             margin-top: 60px;
             background-color: #0f0f0f;
@@ -152,7 +143,7 @@
 <section class="intro">
     <h3>A Clear Vision, Thoughtfully Crafted</h3>
     <p>Clarion Works Co builds digital experiences rooted in refinement and purpose.</p>
-    <p>We believe in design that communicates simply, functions cleanly, and feels effortless.</p>
+    <p>Design that communicates simply, functions cleanly, and feels effortless.</p>
 
     <div class="values">
         <div class="value-box">
