--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Clarion Works Co</title>
 
     <!-- Google Analytics 4 (Correct Measurement ID) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ND2WF11DY1"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JNDHVYKTXL"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-ND2WF11DY1');
+      gtag('config', 'G-JNDHVYKTXL');
     </script>
 
     <!-- Google Font: Inter -->
@@ -157,7 +157,7 @@
         </div>
 
         <div class="value-box">
-            <h4>Creativity</h4>
+            <h4>Creatativity</h4>
             <p>Fresh, modern, and meaningful digital expression.</p>
         </div>
     </div>
