Fix merge conflict and update index.html with GA ID

--- a/index.html
+++ b/index.html
@@ -2,20 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" 
+/>
     <title>Clarion Works Co</title>
 
     <!-- Google Analytics 4 (Correct Measurement ID) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JNDHVYKTXL"></script>
+    <script async 
+src="https://www.googletagmanager.com/gtag/js?id=G-1T4EP1GJ4F"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-JNDHVYKTXL');
+      gtag('config', 'G-1T4EP1GJ4F');
     </script>
 
     <!-- Google Font: Inter -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link 
+href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" 
+rel="stylesheet">
 
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -42,8 +46,10 @@
         }
 
         .hero {
-            background: linear-gradient(rgba(0,0,0,0.45), rgba(0,0,0,0.45)),
-                        url('https://images.unsplash.com/photo-1503264116251-35a269479413?auto=format&fit=crop&w=1600&q=60');
+            background: linear-gradient(rgba(0,0,0,0.45), 
+rgba(0,0,0,0.45)),
+                        
+url('https://images.unsplash.com/photo-1503264116251-35a269479413?auto=format&fit=crop&w=1600&q=60');
             background-size: cover;
             background-position: center;
             height: 55vh;
@@ -137,27 +143,32 @@
 
 <section class="hero">
     <h2>Where Precision Meets Creativity</h2>
-    <p>A modern design firm focused on clarity, structure, and intentional craftsmanship.</p>
+    <p>A modern design firm focused on clarity, structure, and intentional 
+craftsmanship.</p>
 </section>
 
 <section class="intro">
     <h3>A Clear Vision, Thoughtfully Crafted</h3>
-    <p>Clarion Works Co builds digital experiences rooted in refinement and purpose.</p>
-    <p>Design that communicates simply, functions cleanly, and feels effortless.</p>
+    <p>Clarion Works Co builds digital experiences rooted in refinement 
+and purpose.</p>
+    <p>Design that communicates simply, functions cleanly, and feels 
+effortless.</p>
 
     <div class="values">
         <div class="value-box">
             <h4>Clarity</h4>
-            <p>Every choice is deliberate. Every detail serves purpose.</p>
+            <p>Every choice is deliberate. Every detail serves 
+purpose.</p>
         </div>
 
         <div class="value-box">
             <h4>Craftsmanship</h4>
-            <p>Quality over quantity — always. Precision is our baseline.</p>
+            <p>Quality over quantity — always. Precision is our 
+baseline.</p>
         </div>
 
         <div class="value-box">
-            <h4>Creatativity</h4>
+            <h4>Creativity</h4>
             <p>Fresh, modern, and meaningful digital expression.</p>
         </div>
     </div>
@@ -169,3 +180,4 @@
 
 </body>
 </html>
+
